# SRTPluginProviderRE9

./: .gitignore  README.md
.github/workflows/: AutomatedRelease.yml
src/: SRTPluginProviderRE9.sln
src/SRTPluginProviderRE9/: Contexts.cs  Directory.Build.props  GameHashes.cs  GameMemory.cs  GameMemoryScanner.cs  GameVersion.cs  HPData.cs  IGameMemory.cs  PluginInfo.cs  SRTPluginProviderRE9.cs  SRTPluginProviderRE9.csproj  SRTPluginProviderRE9.sln
src/SRTPluginRE9/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/SRTPluginRE9/src/App/: CMakeLists.txt  ExeInjector.cpp
src/SRTPluginRE9/src/App/include/: ExeInjector.h
src/SRTPluginRE9/src/Hook/: AOBScanner.cpp  CMakeLists.txt  DX12Hook.cpp  DeferredWndProc.cpp  DescriptorHeapAllocator.cpp  DllMain.cpp  GameVersion.cpp  Hash.cpp  Hook.cpp  Logger.cpp  Process.cpp  Render.cpp  Settings.cpp  Thread.cpp  UI.cpp  VTableScanner.cpp
src/SRTPluginRE9/src/Hook/include/: AOBScanner.h  CharacterMap.h  CompositeOrderer.h  DX12Hook.h  DateTime.h  DeferredWndProc.h  DescriptorHeapAllocator.h  DllMain.h  EnemyIds.h  GUID.h  GameObjects.h  GameVersion.h  Globals.h  Hash.h  Hook.h  Logger.h  Logo.h  ObjectHelpers.h  Process.h  Protected_Ptr.h  Render.h  Settings.h  Thread.h  UI.h  VTableScanner.h
